--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
+  margin: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h3 {
+  margin-bottom: 3px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h4 {
+  font-weight: normal;
+  opacity: 0.4;
+  margin-top: 0;
+  font-style: italic;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.application {
+  background: #abd;
+  border-radius: 5px;
+  margin: 3px 0;
+  padding: 5px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.application span {
+  display: inline-block;
+  min-width: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addForm {
+  margin-top: 20px;
+}
+
+.addForm label {
+  margin-right: 10px;
+}
+
+.addForm input[type="text"] {
+  margin-left: 10px;
+  width: 120px;
 }
