--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  margin: 30px;
+  margin: 30px auto;
+  max-width: 800px;
 }
 
 h3 {
@@ -15,9 +16,9 @@ h4 {
 
 .application {
   background: #abd;
-  border-radius: 5px;
+  border-radius: 10px;
   margin: 3px 0;
-  padding: 5px 20px;
+  padding: 5px 5px 5px 15px;
 }
 
 .application span {
@@ -66,3 +67,15 @@ h4 {
   font-family: 'Segoe UI Emoji';
 }
 
+.deleteButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  float: right;
+  height: 30px;
+  padding: 5px;
+}
+
+.deleteButton::after {
+  content: url(cross.svg);
+}
