--- a/src/App.css
+++ b/src/App.css
@@ -14,41 +14,73 @@ h4 {
   font-style: italic;
 }
 
+.icon {
+  font-family: 'Segoe UI Emoji';
+}
+
 .application {
   background: #abd;
   border-radius: 10px;
   margin: 3px 0;
   padding: 5px 5px 5px 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr auto;
+  grid-template-areas: "title state link delete";
+  justify-items: stretch;
+  align-items: center;
+  column-gap: 10px;
 }
 
-.application span {
-  display: inline-block;
-  min-width: 100px;
+.title {
+  grid-area: title;
 }
 
-.application .icon {
-  font-size: 20pt;
-  min-width: 30pt;
+.state {
+  grid-area: state;
 }
 
-.application .stateName {
-  min-width: 150px;
+.optionContainer {
+  display: flex;
+  align-items: center;
 }
 
-.application a {
+.optionContainer .icon {
+  font-size: 18pt;
+  margin-right: 5px;
+}
+
+.link {
+  grid-area: link;
+}
+
+.link a {
   color: #333;
   font-size: 11pt;
-}
-
-.application a span {
-  text-decoration: underline;
-}
-
-.application a .icon {
   text-decoration: none;
-  font-size: 11pt;
-  min-width: 15pt;
 }
+
+.link .linkLabel {
+  text-decoration: underline;
+  display: inline-block;
+  margin-left: 0.5em;
+}
+
+.delete {
+  grid-area: delete;
+}
+
+.deleteButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  height: 30px;
+  padding: 5px;
+}
+
+.deleteButton::after {
+  content: url(cross.svg);
+}
+
 
 .addForm {
   margin-top: 20px;
@@ -63,19 +95,4 @@ h4 {
   width: 120px;
 }
 
-.icon {
-  font-family: 'Segoe UI Emoji';
-}
 
-.deleteButton {
-  background: none;
-  border: none;
-  cursor: pointer;
-  float: right;
-  height: 30px;
-  padding: 5px;
-}
-
-.deleteButton::after {
-  content: url(cross.svg);
-}
