--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
-  margin: 30px auto;
-  max-width: 800px;
+  margin: 30px 0;
+  display: grid;
+  grid-template-columns: minmax(30px, 1fr) minmax(250px, 800px) minmax(30px, 1fr);
+  justify-items: stretch;
+  align-items: stretch;
+}
+
+.appContent {
+  grid-column: 2 / 3;
 }
 
 h3 {
@@ -15,28 +22,29 @@ h4 {
 }
 
 .icon {
-  font-family: 'Segoe UI Emoji';
+  font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 .application {
   background: #abd;
   border-radius: 10px;
-  margin: 3px 0;
+  margin: 8px 0;
   padding: 5px 5px 5px 15px;
+  box-shadow: 0 1px 3px #0003;
+  
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr auto;
-  grid-template-areas: "title state link delete";
+  grid-template-columns: 1fr auto;
   justify-items: stretch;
-  align-items: center;
   column-gap: 10px;
 }
 
-.title {
-  grid-area: title;
-}
-
-.state {
-  grid-area: state;
+.applicationContent {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 35px;
+  justify-items: stretch;
+  align-items: center;
+  column-gap: 10px;
 }
 
 .optionContainer {
@@ -50,26 +58,32 @@ h4 {
 }
 
 .link {
-  grid-area: link;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .link a {
   color: #333;
   font-size: 11pt;
   text-decoration: none;
+  display: flex;
+}
+
+.link a:focus {
+  color: orangered;
 }
 
 .link .linkLabel {
   text-decoration: underline;
-  display: inline-block;
   margin-left: 0.5em;
-}
-
-.delete {
-  grid-area: delete;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .deleteButton {
+  align-self: center;
   background: none;
   border: none;
   cursor: pointer;
@@ -84,15 +98,25 @@ h4 {
 
 .addForm {
   margin-top: 20px;
+  display: grid;
+  grid-template-columns: minmax(min-content, auto) minmax(100px, 2fr) minmax(min-content, auto) minmax(100px, 3fr) auto;
+  column-gap: 10px;
+  align-items: center;
 }
 
-.addForm label {
-  margin-right: 10px;
+@media (max-width: 600px) {
+  .addForm {
+    grid-template-columns: auto;
+  }
+
+  label, input[type="submit"] {
+    margin-top: 10px;
+  }
 }
 
 .addForm input[type="text"] {
-  margin-left: 10px;
-  width: 120px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 
