--- a/src/App.css
+++ b/src/App.css
@@ -114,9 +114,43 @@ h4 {
   }
 }
 
+.addForm input {
+  min-height: 38px;
+}
+
+.addForm input[type="submit"] {
+  background: #46566f;
+  color: white;
+  font-size: 1em;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 1px 4px #0006;
+  box-sizing: border-box;
+  min-width: 70px;
+}
+
 .addForm input[type="text"] {
   width: 100%;
   box-sizing: border-box;
 }
 
-
+/* List Animation */
+.item-enter {
+  opacity: 0;
+  transform: translateY(10px);
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+  transform: translateY(0px);
+  transition: transform 200ms ease-out;
+}
+.item-exit {
+  opacity: 1;
+  transform: translateX(0px);
+}
+.item-exit-active {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 300ms, transform 200ms;
+}
