--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,10 @@ h4 {
   transform: translateX(100px);
   transition: opacity 300ms, transform 200ms;
 }
+
+.archivesZone {
+  min-height: 20px;
+  background: #eee;
+  padding: 5px;
+  padding-bottom: 1px;
+}
